fixed overflow problem

--- a/style.css
+++ b/style.css
@@ -68,8 +68,22 @@
 .hero {
   background-color: var(--secondary-color-dark);
 }
-.hero h1{
+
+.hero  h4{
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+.hero h1 {
+  margin-bottom: 2rem;
   font-size: 3rem;
+  font-weight: 600;
+  line-height: 3.5rem;
+}
+
+.hero p {
+  margin-bottom: 2rem;
+  color: var(--text-light);
 }
 /* about */
 
